force-app/main/default/objects/Song__c/fields/Album_Id__c.field-meta.xml
<CustomField>
    <fullName>Album_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Album_Id</label>
    <referenceTo>Album__c</referenceTo>
    <relationshipLabel>Songs</relationshipLabel>
    <relationshipName>Songs</relationshipName>
    <type>Lookup</type>
</CustomField>