force-app/main/default/objects/Song__c/fields/Artist_Id__c.field-meta.xml
<CustomField>
    <fullName>Artist_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist_Id</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Songs</relationshipLabel>
    <relationshipName>Songs</relationshipName>
    <type>Lookup</type>
</CustomField>