force-app/main/default/objects/Song__c/fields/Genre__c.field-meta.xml
<CustomField>
    <fullName>Genre__c</fullName>
    <label>Genre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pop</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Jazz</fullName>
            </value>
            <value>
                <fullName>Classic</fullName>
            </value>
            <value>
                <fullName>Hip-hop</fullName>
            </value>
            <value>
                <fullName>Reggaeton</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Indie</fullName>
            </value>
            <value>
                <fullName>Funk</fullName>
            </value>
            <value>
                <fullName>R&amp;B</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>